syntax = "proto3";

package benchpb;

option go_package = "github.com/tochemey/goakt/v3/bench/benchpb;benchpb";

message BenchTell {}
message BenchRequest {}
message BenchResponse {}

message Ping {}
message Pong {}
message BenchPriorityMailbox {
  // Specifies the message priority
  int64 priority = 1;
}
